Refactor package layout for clean architecture (#108)
* Refactor packages for clean architecture

* Save

* Minor fix

* Fix by Codex

* Enhance FlushCommand error handling with exception catch

* Use toList() instead of collect(Collectors.toList()) for Java 17 (#109)

* Initial plan

* Replace collect(Collectors.toList()) with toList() in StatsSubCommands

Co-authored-by: yuokada <387284+yuokada@users.noreply.github.com>

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: yuokada <387284+yuokada@users.noreply.github.com>

* Eliminate code duplication in Memcached socket adapters via abstract base class (#110)

* Initial plan

* Extract common socket communication logic to AbstractMemcachedSocketAdapter

Co-authored-by: yuokada <387284+yuokada@users.noreply.github.com>

* Make loop logic consistent between MemcachedKeysAdapter and MemcachedDumpAdapter

Co-authored-by: yuokada <387284+yuokada@users.noreply.github.com>

* Add no-args constructor to AbstractMemcachedSocketAdapter for CDI proxying

Co-authored-by: yuokada <387284+yuokada@users.noreply.github.com>

---------

Co-authored-by: copilot-swe-agent[bot] <198982749+Copilot@users.noreply.github.com>
Co-authored-by: yuokada <387284+yuokada@users.noreply.github.com>

---------

Co-authored-by: yuokada <yuokada@users.noreply.github.com>
Co-authored-by: Copilot <198982749+Copilot@users.noreply.github.com>